--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
+#App {
+  text-align: center;
+  background-color: #F2E9E4;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 50%;
+  padding-top: 20px;
+}
+
+#login-page {
+  background-image: url(https://res.cloudinary.com/dqms0calh/image/upload/o_47/v1644515962/pexels-olya-kobruseva-5408919_pbv3d4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 15%;
+}
+
+#create-account-page {
+  background-image: url(https://res.cloudinary.com/dqms0calh/image/upload/o_47/v1644515962/pexels-olya-kobruseva-5408919_pbv3d4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 15%;
+}
+
+#logo {
+  height: 10%;
+  margin-left: 10px;
+  margin-right: 10px;
+  width:450px; 
+  height: auto;
+  opacity: .8;
+  padding-bottom: 10px;
+}
+
+#photo-credit-footer {
+  align-items: center;
+}
 /*
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -157,9 +194,9 @@ p {
 /* Links
 â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
 a {
-  color: #1EAEDB; }
+  color: #4A4E69; }
 a:hover {
-  color: #0FA0CE; }
+  color: #9A8C98; }
 
 
 /* Buttons
@@ -174,6 +211,7 @@ input[type="button"] {
   padding: 0 30px;
   color: #555;
   text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
@@ -181,7 +219,7 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  background-color: #9A8C98;
   border-radius: 4px;
   border: 1px solid #bbb;
   cursor: pointer;
@@ -236,6 +274,7 @@ select {
   height: 38px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   border: 1px solid #D1D1D1;
   border-radius: 4px;
   box-shadow: none;
@@ -415,3 +454,48 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
+.vocab-card {
+  padding: 20px;
+  border-style: dashed;
+  border-width: 2px;
+  border-color: #4A4E69;
+  display:inline-block;
+  margin-right: 10px;
+  background-color: #C9ADA7;
+  border-radius: 4px;
+  font-size: larger;
+}
+
+.note-card {
+  padding: 20px;
+  border-style: dashed;
+  border-width: 2px;
+  border-color: #4A4E69;
+  display:inline-block;
+  margin-right: 10px;
+  background-color: #C9ADA7;
+  border-radius: 4px;
+  font-size: larger;
+}
+
+h1{
+  color: #4A4E69;
+  letter-spacing: 4px;
+}
+
+h2 {
+  color: #4A4E69;
+}
+
+h3 {
+  color: #9A8C98;
+}
+
+p {
+  color: #4A4E69;
+}
+
+label {
+  color: #9A8C98;
+}
